--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "supertest": "^6.1.5"
   },
   "scripts": {
-    "test": "jest --coverage --verbose",
+    "test": "NODE_ENV=test jest --coverage --verbose ",
     "start": "node server.js"
   },
   "repository": {
