--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test jest --coverage --verbose ",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
